<resources>
    <string name="app_name">Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="category">Category</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="our_papular_items">Our papular items</string>
    <string name="search_meal">Search Meal</string>
    <string name="meal_name">Meal Name</string>
    <string name="textview">TextView</string>
    <string name="instructions">- Instructions:</string>
    <string name="demotext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="chicken">Chicken</string>
    <string name="_16">16</string>
    <string name="taste_the_joy_your_recipe_adventure_begins">Taste the Joy – Your Recipe Adventure Begins!</string>
    <string name="read_more">Read more</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="favourite_meals">Favourite Meals</string>
</resources>